# DataArt

./: README.md  get_meteo_data.py  pyproject.toml  sketch1.py  sketch2.py  sketch4.py  sketch5.py  sketch6.py  sketch7.py  sketch8.py  sketch9.py
